<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.gridFragmentRecycler"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/title_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="10dp"
            android:text="@string/recommended"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/firstRown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/title_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/homeFavorites"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/title_artist_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/homeArtistRecommended"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/title_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/homeSongs"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>


</LinearLayout>