<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".Views.Fragments.UploadMusicFragment">

    <!-- TODO: Update blank fragment layout -->
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:id="@+id/artist"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/artista"
            android:gravity="center"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/name_artist"
            style="@style/sectionHeader"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down"/>
    </LinearLayout>
    <Space
        android:id="@+id/space"
        android:layout_below="@id/artist"
        android:layout_width="match_parent"
        android:layout_height="35dp"/>
    <LinearLayout
        android:id="@+id/song_name"
        android:layout_below="@id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:gravity="center"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/name_song"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:lines="1"
            android:backgroundTint="@color/white"
            android:inputType="text" />
    </LinearLayout>

    <Space
        android:id="@+id/space2"
        android:layout_below="@id/song_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"/>
    <LinearLayout
        android:id="@+id/url_music"
        android:layout_below="@id/space2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/upl_song"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_cancion"
            android:background="@drawable/btn_rounded_overlay"
            android:backgroundTint="@color/btn_pressed_upl"
            android:textSize="15sp"
            android:paddingHorizontal="15dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/url_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/empty_file"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_marginStart="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/url_music"
        android:layout_above="@id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txt_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subir_caratula"
            android:gravity="center"
            android:textSize="25sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:minHeight="5dp"/>
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:minWidth="150dp"
            android:minHeight="150dp">
            <ImageView
                android:id="@+id/img_song"
                android:src="@drawable/img_default_song"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/google_storage_bucket"
                />
            <ImageButton
                android:id="@+id/cancel"
                android:visibility="gone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_close"
                android:background="@drawable/btn_circle"
                android:backgroundTint="@color/btn_pressed_2"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/close" />

            <ImageButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image_add_foreground"
                android:background="@drawable/btn_circle"
                android:backgroundTint="@color/btn_pressed_2"
                android:padding="0dp"
                android:scaleType="center"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subir"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        android:background="@drawable/btn_rounded_overlay"
        android:backgroundTint="@color/btn_pressed_upl"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15sp"/>

</RelativeLayout>