<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment"
    android:orientation="vertical"
    android:id="@+id/home_content"
    >


    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:id="@+id/layout_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/title_recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:padding="10dp"
                    android:text="@string/recommended"
                    android:textColor="#ffffff"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/firstRown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/title_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:padding="10dp"
                    android:text="@string/homeFavorites"
                    android:textColor="#ffffff"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/secondRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_artist_rcommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/title_artist_recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:padding="10dp"
                    android:text="@string/homeArtistRecommended"
                    android:textColor="#ffffff"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/thirdRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/title_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:padding="10dp"
                    android:text="@string/homeSongs"
                    android:textColor="#ffffff"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fourthRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottomsheet"
        android:id="@+id/bottomsheet"
        android:visibility="invisible"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>