<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ConfigurationActivity"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/black_overlay"
                android:paddingBottom="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Configuracion"
                    android:textSize="35sp"
                    android:textStyle="bold"/>
            </com.google.android.material.appbar.MaterialToolbar>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingHorizontal="20dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/img_user_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perfil"
                    android:textSize="25sp"
                    android:layout_margin="5dp"/>
                <EditText
                    android:id="@+id/userNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/user"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btn_upload_img_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Subir Perfil"
                        android:textSize="18sp"
                        android:layout_margin="5dp"
                        android:pointerIcon="hand"/>
                    <ImageView
                        android:id="@+id/img_user_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ainaaiba"
                        android:scaleType="centerCrop"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="35dp">
                    <Button
                        android:id="@+id/btn_img_cover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Subir Portada"
                        android:textSize="18sp"
                        android:layout_margin="5dp"
                        android:pointerIcon="hand"/>
                    <ImageView
                        android:id="@+id/img_user_cover"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/ainaaiba"
                        android:scaleType="centerCrop"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/button_rounded"
                    android:backgroundTint="@color/btn_pressed"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>

            </LinearLayout>

           <Space
               android:layout_width="match_parent"
               android:layout_height="60dp"/>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingHorizontal="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cuenta"
                android:textSize="25sp"
                android:layout_margin="5dp"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/email"
                    />
                <EditText
                    android:id="@+id/currentPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginHorizontal="10dp"
                    android:hint="Current Password"
                    />
                <EditText
                    android:id="@+id/newPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginHorizontal="10dp"
                    android:hint="New Password"
                    />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <Button
                android:id="@+id/btn_update_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Actualizar"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/btn_pressed"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>